--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Dishant Patel",
   "license": "ISC",
+  "engines": {
+    "node": "18.18.0"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
